chore: Endrer til toList de fleste steder for å få immutable lists